Fix bug #81630: Don't claim known hash in getTraitAliases()

We don't intern this string, and this code is not particularly
performance critical in the first place, so just drop the the
assumption.